support for github actions and 1.21 update

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,11 @@
 name: Teams
 version: '${project.version}'
 main: io.github.cardsandhuskers.teams.Teams
-api-version: 1.19
+api-version: '1.21'
 depend: [PlayerPoints]
 softdepend: [PlaceholderAPI]
+authors: [ cardsandhuskers ]
+description: Teams manager
 commands:
   teamMenu:
     description: opens the team menu
