--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,3 +31,4 @@ jobs:
           mvn clean deploy --settings .github/settings.xml
         env:
           GITHUB_TOKEN: ${{ secrets.MVN_TOKEN }}
+          GITHUB_USERNAME: cardsandhuskers
